Bug 133396 - VCL plugins treats missing GtkAdjustment sub-elements differently from GTK (reference)
Summary: VCL plugins treats missing GtkAdjustment sub-elements differently from GTK (r...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-26 05:51 UTC by Mike Kaganski
Modified: 2021-09-10 07:59 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2020-05-26 05:51:39 UTC
Having a GtkAdjustment for a GtkSpinButton, and missing "upper" and "lower" subelements in the GtkAdjustment makes the control unlimited from top in all VCL plugins except for gtk (e.g., gen or win), where that makes control disabled.

We need to make the behaviour consistent across the plugins to match the reference (gtk).
Comment 1 Caolán McNamara 2020-05-26 07:53:05 UTC
did you encounter this with a specific existing example, or some work in progress you can share ?
Comment 2 Mike Kaganski 2020-05-26 07:56:21 UTC
That is with Glow effect that I added sidebar panel for - in Draw, add a shape (e.g., ellipse), select it, and in Glow panel (Properties sidebar), try to change radius - it works with gen or on Windows, but not on gtk3
Comment 3 Commit Notification 2020-05-27 15:43:55 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d9fa826769cd570814f3556d53493a78d2869873

tdf#133396 FormattedField comes with differrent defaults than GtkSpinButton

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2020-05-27 15:46:08 UTC
that seems to do what we want