tdf#133396 FormattedField comes with differrent defaults than GtkSpinButton

so explicitly set the GtkSpinButton defaults in their absence from a GtkAdjustment

Change-Id: Idbf3370ab35c9d48a4f01a680ca4413238a8fd6e